--- a/index_eus.html
+++ b/index_eus.html
@@ -74,7 +74,7 @@
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
 												<li class="active"><a href="#banner">Hasiera</a></li>												
-												<li><a href="#acerca">Gu</a></li>
+												<li><a href="#acerca">Nor gara</a></li>
 												<li><a href="#servicios">Zerbitzuak</a></li>												
 												<li><a href="#horario">Ordutegia</a></li>
 												<li><a href="#contacto">Kontaktoa</a></li>
