--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h1 id="acerca" class="title text-center">Sobre nosotros <span>Izaskun</span></h1>
-						<p class="lead text-center">Llevamos 48 años atendiendo a la clientela en la calle Mayor de Getaria.</p>
+						<p class="lead text-center" id="intro">Llevamos 48 años atendiendo a la clientela en la calle Mayor de Getaria.</p>
 						<div class="space"></div>
 						<div class="row">
 							<div class="col-md-8">
@@ -153,19 +153,26 @@
 			<div class="container no-view" data-animation-effect="fadeIn">
 				<h1 id="servicios" class="title text-center">Servicios</h1>
 				<div class="space"></div>
-				<div class="row" id="sev">
+				<div class="row" id="serv">
 					<div class="col-md-4">
-						<img src="images/redondo1.png" alt="Foto_cortes" class="redondo">
-						<p class="texto">Cortes de todo tipo</p>
+						<div class="bloque">
+							<img src="images/redondo1.png" alt="Foto_cortes" class="redondo">
+							<p class="texto">Cortes de todo tipo</p>
+						</div>
 
 					</div>
+
 					<div class="col-md-4">
-						<img src="images/redondo2.png" alt="Foto_cortes" class="redondo">
-						<p class="texto">Tintes y coloraciones</p>
+						<div class="bloque">
+							<img src="images/redondo2.png" alt="Foto_cortes" class="redondo">
+							<p class="texto">Tintes y coloraciones</p>
+						</div>
 					</div>
 					<div class="col-md-4">
-						<img src="images/redondo3.png" alt="Foto_cortes" class="redondo">
-						<p class="texto">Traminetos capilares</p>
+						<div class="bloque">
+							<img src="images/redondo3.png" alt="Foto_cortes" class="redondo">
+							<p class="texto">Traminetos capilares</p>
+						</div>
 				</div>
 				
 				</div>
