--- a/index_eus.html
+++ b/index_eus.html
@@ -128,7 +128,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h1 id="acerca" class="title text-center">Nor gara <span>Izaskun</span></h1>
-						<p class="lead text-center">Izaskun ile apaindegiak 48 urte darama Getariako kale Nagusian bezeroei  zerbitzua ematen.</p>
+						<p class="lead text-center" id="intro">Izaskun ile apaindegiak 48 urte darama Getariako kale Nagusian bezeroei  zerbitzua ematen.</p>
 						<div class="space"></div>
 						<div class="row">
 							<div class="col-md-8">
@@ -152,19 +152,25 @@
 			<div class="container no-view" data-animation-effect="fadeIn">
 				<h1 id="servicios" class="title text-center">Zerbitzuak</h1>
 				<div class="space"></div>
-				<div class="row" id="sev">
+				<div class="row" id="serv">
 					<div class="col-md-4">
-						<img src="images/redondo1.png" alt="Foto_cortes" class="redondo">
-						<p class="texto">Era guztietako mozketak</p>
+						<div class="bloque">
+							<img src="images/redondo1.png" alt="Foto_cortes" class="redondo">
+							<p class="texto">Era guztietako mozketak</p>
+						</div>
 
 					</div>
 					<div class="col-md-4">
-						<img src="images/redondo2.png" alt="Foto_cortes" class="redondo">
-						<p class="texto">Tindagaiak eta kolorazioak</p>
+						<div class="bloque">
+							<img src="images/redondo2.png" alt="Foto_cortes" class="redondo">
+							<p class="texto">Tindagaiak eta kolorazioak</p>
+						</div>
 					</div>
 					<div class="col-md-4">
-						<img src="images/redondo3.png" alt="Foto_cortes" class="redondo">
-						<p class="texto">Tratamendu kapilarra</p>
+						<div class="bloque">
+							<img src="images/redondo3.png" alt="Foto_cortes" class="redondo">
+							<p class="texto">Tratamendu kapilarra</p>
+						</div>
 				</div>
 				
 				</div>
