--- a/index_eus.html
+++ b/index_eus.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Izaskun Ileapaindegia</title>
-		<meta name="description" content="Responsive HTML5 Template">
+		<meta name="description" content="Izaskun Ileapaindegia">
 		<meta name="author" content="Luciniri">
 
 		<!-- Mobile Meta -->
