--- a/index_eus.html
+++ b/index_eus.html
@@ -275,7 +275,7 @@
 
 									<!-- <div class="col-sm-6"> -->
 								
-										<p class="contacts" id="direccion"><i class="fa fa-map-marker"></i> Peluquería Izaskun, Calle Mayor 16, Getaria </p>
+										<p class="contacts" id="direccion"><i class="fa fa-map-marker"></i> Izaskun Ileapaindegia, Nagusi kalea 16, Getaria </p>
 
 									<!-- </div>
 
