--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<div class="container">
 					<div class="row">					 
 						<div class="caption-data" style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
-								<p id="izaskun">Izaskun Ileapaindegia</p>
+								<p id="izaskun">Peluquería Izaskun</p>
 								<!-- <h3 class="padding-top30">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/> Eos debitis provident nulla illum minus.</h3> -->
 								
 							</div>
