--- a/index_eus.html
+++ b/index_eus.html
@@ -193,8 +193,7 @@
 					  </tr>
 					  <tr>
 						<th scope="row">Asteartea</th>
-						<td class="itxita">Itxita</td>
-						<td class="itxita">Itxita</td>
+						<td class="itxita" COLSPAN="2">Itxita</td>
 					  </tr>
 					  <tr>
 						<th scope="row">Asteazkena</th>
@@ -218,8 +217,7 @@
 					  </tr>
 					  <tr>
 						<th scope="row">Igandea</th>
-						<td class="itxita">Itxita</td>
-						<td class="itxita">Itxita</td>
+						<td class="itxita" COLSPAN="2">Itxita</td>
 					  </tr>
 					</tbody>
 				  </table>
